--- a/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
@@ -46,8 +46,15 @@
                     </div>
                     <div class="mb-4">
                         <label asp-for="PatientRecord.MotherBirthday" class="block mb-2 text-sm font-medium text-gray-700">Mother's Birthdate</label>
-                        <input asp-for="PatientRecord.MotherBirthday" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="PatientRecord.MotherBirthday" class="block mb-2 text-sm text-red-700"></span>
+                        <div class="relative w-full md:w-4/5 mb-4">
+                            <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                                </svg>
+                            </div>
+                            <input datepicker id="acceptedDate" asp-for="PatientRecord.MotherBirthday" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Select date">
+                            <span asp-validation-for="PatientRecord.MotherBirthday" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
                     </div>
                     <div class="mb-4">
                         <label asp-for="PatientRecord.FatherName" class="block mb-2 text-sm font-medium text-gray-700">Father's Name</label>
@@ -60,13 +67,20 @@
                         <span asp-validation-for="PatientRecord.FatherAge" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="PatientRecord.FatherBirthday" class="block mb-2 text-sm font-medium text-gray-700">Father's Birthdate</label>
-                        <input asp-for="PatientRecord.FatherBirthday" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="PatientRecord.FatherBirthday" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="PatientRecord.FatherBirthday" class="block mb-2 text-sm font-medium text-gray-700">Fathers's Birthdate</label>
+                        <div class="relative w-full md:w-4/5 mb-4">
+                            <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                                </svg>
+                            </div>
+                            <input datepicker id="acceptedDate" asp-for="PatientRecord.FatherBirthday" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Select date">
+                            <span asp-validation-for="PatientRecord.FatherBirthday" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
                     </div>
                 </div>
                 <div>
-                    <div class="mb-2 mt-8">
+                    <div class="mb-2">
                         <h6 class="text-md font-bold text-gray-800">Contact Information</h6>
                     </div>
                     <div class="mb-4">
@@ -91,7 +105,7 @@
             </div>
             <div class="flex justify-end">
                 <a asp-action="Details" asp-route-householdNo="@Model.HouseholdNo" asp-route-id="@Model.PatientRecord.Id" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
-                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Add</button>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Update</button>
             </div>
         </form>
     </div>
