--- a/AUF.EMR.MVC/Views/VaccinationAppointment/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/VaccinationAppointment/Edit.cshtml
@@ -17,42 +17,51 @@
             <input type="hidden" asp-for="Appointment.Id" />
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Vaccination Appointment</h1>
             <hr class="mb-4">
-            <div class="grid grid-cols-1 gap-12">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
                     <div class="mb-4">
-                        <label asp-for="Appointment.VaccinationDate" class="text-md font-bold text-gray-800">Vaccination Date</label>
-                        <input asp-for="Appointment.VaccinationDate" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="Appointment.VaccinationDate" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="Appointment.VaccinationDate" class="block mb-2 text-sm font-medium text-gray-700">Father's Birthdate</label>
+                        <div class="relative w-full md:w-4/5 mb-4">
+                            <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                                </svg>
+                            </div>
+                            <input datepicker id="acceptedDate" asp-for="Appointment.VaccinationDate" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5" placeholder="Select date">
+                            <span asp-validation-for="Appointment.VaccinationDate" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Appointment.Weight" class="text-md font-bold text-gray-800">Weight</label>
+                        <label asp-for="Appointment.Weight" class="block mb-2 text-sm font-medium text-gray-700">Weight</label>
                         <input asp-for="Appointment.Weight" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Appointment.Weight" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Appointment.Height" class="text-md font-bold text-gray-800">Height</label>
+                        <label asp-for="Appointment.Height" class="block mb-2 text-sm font-medium text-gray-700">Height</label>
                         <input asp-for="Appointment.Height" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Appointment.Height" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Appointment.Temperature" class="text-md font-bold text-gray-800">Temperature</label>
+                        <label asp-for="Appointment.Temperature" class="block mb-2 text-sm font-medium text-gray-700">Temperature</label>
                         <input asp-for="Appointment.Temperature" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="Appointment.Temperature" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
+                    <div>
+                        <label class="block mb-2 text-sm font-medium text-gray-700">Vaccines</label>
+                        <button id="dropdownHelperButton" data-dropdown-toggle="dropdownHelper" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                            Select Vaccine(s) <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
+                            </svg>
+                        </button>
+                    </div>
 
-                    <button id="dropdownHelperButton" data-dropdown-toggle="dropdownHelper" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-                        Vaccines <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
-                        </svg>
-                    </button>
-                    
                     @for (var i = 0; i < Model.SelectedVaccines.Count(); i++)
-                        {
-                            <input asp-for="@Model.SelectedVaccines[i].Id" type="hidden" value="@Model.SelectedVaccines[i].Id" />
-                            <input asp-for="@Model.SelectedVaccines[i].Name" type="hidden" />
-                            <input asp-for="@Model.SelectedVaccines[i].Description" type="hidden" />
-                        }
+                    {
+                        <input asp-for="@Model.SelectedVaccines[i].Id" type="hidden" value="@Model.SelectedVaccines[i].Id" />
+                        <input asp-for="@Model.SelectedVaccines[i].Name" type="hidden" />
+                        <input asp-for="@Model.SelectedVaccines[i].Description" type="hidden" />
+                    }
 
                     <!-- Dropdown menu -->
                     <div id="dropdownHelper" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-60 dark:bg-gray-700 dark:divide-gray-600">
@@ -80,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex justify-end">
+            <div class="flex justify-end mt-4">
                 <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Save</button>
             </div>
