Update create and edit titles

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_BarangaySideLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Update Barangay Details";
 }
 
 <div class="container mx-auto px-4 py-8">
