--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layouts/_HouseholdLayout";
+    ViewData["Title"] = "Dashboard - Barangay";
 }
 
 <section class="mt-8 flex justify-center items-center p-16">
