--- a/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
@@ -11,7 +11,10 @@
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Pregnancy Tracking HH</h1>
+            <div class="w-3/4">
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">National Safe Motherhood Program - Pregnancy Tracking Information</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
