--- a/AUF.EMR.MVC/Views/Barangay/Index.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_BarangaySideLayout";
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Barangay";
     ViewData["Barangay"] = Model.BarangayName;
 }
 
