--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["HouseholdNo"] = Model.HouseholdNo;
+    ViewData["Title"] = "Dashboard - Household";
 }
 
 
