--- a/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
@@ -13,7 +13,10 @@
         <form asp-action="Edit">
             <input type="hidden" asp-for="FPRecord.Id" value="@Model.FPRecord.Id" class="home-hero" />
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add Family Planning</h1>
+            <div class="w-3/4">
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Family Planning Client Assessment Record</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 with-separator">
                 <div>
