--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -13,7 +13,11 @@
 <section class="flex justify-center pt-16">
     <div class="w-2/3 my-12">
         <form asp-action="Create">
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Register Household</h1>
+            <div>
+                <h1 class="text-xl">Register</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Household</h1>
+            </div>
+            <hr class="mb-8" />
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <!-- Left Column -->
                 <div>
@@ -183,7 +187,7 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="HouseholdProfile" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Cancel</a>
+                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Cancel</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Register</button>
             </div>
         </form>
