--- a/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
@@ -8,7 +8,11 @@
 <section class="flex justify-center pt-16">
     <div class="w-2/3 my-12">
         <form asp-action="Edit">
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Household</h1>
+            <div>
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Household</h1>
+            </div>
+            <hr class="mb-8" />
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
                 <!-- Left Column -->
