--- a/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
@@ -17,7 +17,10 @@
             <input type="hidden" asp-for="HouseholdMember.IsNhts" value="@Model.HouseholdMember.IsNhts" />
             <input type="hidden" asp-for="HouseholdMember.Age" value="@Model.HouseholdMember.Age" />
             <input type="hidden" asp-for="HouseholdMember.IsInSchool" value="@Model.HouseholdMember.IsInSchool" />
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Household Member</h1>
+            <div>
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Household Member</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <!-- Left Column -->
