--- a/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
@@ -27,7 +27,10 @@
                 <input type="hidden" asp-for="HouseholdMember.NameOfFather" value="@Model.HouseholdMember.NameOfFather" />
                 <input type="hidden" asp-for="HouseholdMember.NameOfMother" value="@Model.HouseholdMember.NameOfMother" />
                 <input type="hidden" asp-for="HouseholdMember.IsInSchool" value="@Model.HouseholdMember.IsInSchool" />
-                <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Oral Health Information</h1>
+                <div>
+                    <h1 class="text-xl">Update</h1>
+                    <h1 class="text-2xl font-bold text-gray-800 mb-4">Oral Health Client Information</h1>
+                </div>
                 <hr class="mb-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <div>
