--- a/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
@@ -13,7 +13,10 @@
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <input type="hidden" asp-for="PatientRecord.Id" value="@Model.PatientRecord.Id"/>
             <input type="hidden" asp-for="PatientRecord.PatientId" value="@Model.PatientRecord.PatientId" />
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add Patient Record</h1>
+            <div class="w-3/4">
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Patient Record</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
