--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
             <input type="hidden" asp-for="PregnancyAppointment.PregnancyRecordId" value="@Model.PregnancyAppointment.PregnancyRecordId" />
             <div>
-                <h1 class="text-xl">Edit</h1>
+                <h1 class="text-xl">Update</h1>
                 <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Appointment</h1>
             </div>
             <hr class="mb-4">
@@ -92,7 +92,7 @@
             </div>
             <div class="flex justify-end">
                 <a href="@Model.RequestUrl" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
-                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Add</button>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Save</button>
             </div>
         </form>
     </div>
