--- a/AUF.EMR.MVC/Views/PregnancyRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Edit.cshtml
@@ -13,7 +13,10 @@
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <input type="hidden" asp-for="PregnancyRecord.Id" value="@Model.PregnancyRecord.Id" />
             <input type="hidden" asp-for="PregnancyRecord.PatientId" value="@Model.PregnancyRecord.PatientId" />
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Pregnancy Record</h1>
+                        <div class="w-3/4">
+                <h1 class="text-xl">Update</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Record</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
@@ -76,7 +79,7 @@
             </div>
             <div class="flex justify-end">
                 <a asp-action="Details" asp-controller="PregnancyRecord" asp-route-id="@Model.PregnancyRecord.Id" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
-                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Submit</button>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Save</button>
             </div>
         </form>
     </div>
