--- a/AUF.EMR.MVC/Views/PregnancyTracking/Create.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Create.cshtml
@@ -15,7 +15,10 @@
             <div class="mb-4">
                 <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             </div>
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add Pregnancy Tracking</h1>
+            <div class="w-3/4">
+                <h1 class="text-xl">Create</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">National Safe Motherhood Program - Pregnancy Tracking Form</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
