--- a/AUF.EMR.MVC/Views/WRA/Create.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Create.cshtml
@@ -10,7 +10,10 @@
     <div class="bg-white shadow-md rounded-lg p-8 mb-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="block mb-2 text-sm text-red-700"></div>
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Add WRA</h1>
+            <div class="w-3/4">
+                <h1 class="text-xl">Create</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Women of Reproductive Age and Adolescent Women for Family Planning Services Form</h1>
+            </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
