--- a/AUF.EMR.MVC/Views/FamilyPlanning/Details.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailFamilyPlanningVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Family Planning Record - Details";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
