--- a/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Edit.cshtml
@@ -4,7 +4,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Family Planning Record - Update";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
