--- a/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
+++ b/AUF.EMR.MVC/Views/FamilyPlanning/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FamilyPlanningVM
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Family Planning Records";
     Layout = "Layouts/_FamilyPlanningIndex";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
