--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_HouseholdLayout";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Household - Register";
 }
 
 @if (Model.ErrorMessage != null)
