--- a/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/HouseholdProfile.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Household Profile";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
