--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Household Member - Register";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
