--- a/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_MasterlistLayout";
-    ViewData["Title"] = "Household Member Details";
+    ViewData["Title"] = "Household Member - Details";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
