--- a/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/AdultDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailHouseholdMemberVM
 
 @{
-    ViewData["Title"] = "ChildDetails";
+    ViewData["Title"] = "Masterlist of Adult - Details";
     Layout = "Layouts/_MasterlistLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
