--- a/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/ChildDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_MasterlistLayout";
-    ViewData["Title"] = "ChildDetails";
+    ViewData["Title"] = "Masterlist of Child - Details";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
