--- a/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "EditOralHealthInfo";
+    ViewData["Title"] = "Oral Health Client - Update";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
