--- a/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailPatientRecordVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Patient Record - Details";
     Layout = "Layouts/_DetailsLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
