--- a/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyAppointment/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailPregnancyAppointmentVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Pregnancy Appointment - Details";
     Layout = "Layouts/_DetailsLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
