--- a/AUF.EMR.MVC/Views/PregnancyRecord/Create.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Pregnancy Record - Create";
 }
 
 <div class="container mx-auto px-4 py-8">
