--- a/AUF.EMR.MVC/Views/PregnancyRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailPregnancyRecordVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Pregnancy Record - Details";
     Layout = "Layouts/_DetailsLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
