--- a/AUF.EMR.MVC/Views/PregnancyTracking/Create.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Create.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "National Safe Motherhood Program - Create";
 }
 
 <div class="container mx-auto px-4 py-8">
