--- a/AUF.EMR.MVC/Views/PregnancyTracking/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailPregnancyTrackVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "National Safe Motherhood Program - Details";
     Layout = "Layouts/_DetailsLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
