--- a/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PregnancyTrackingListVM
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "National Safe Motherhood Programs - Pregnancy Tracking";
     Layout = "LAyouts/_PregnancyTrackingListIndex";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
