--- a/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "National Safe Motherhood Program Information - Update";
 }
 
 
