--- a/AUF.EMR.MVC/Views/Summary/Weekly.cshtml
+++ b/AUF.EMR.MVC/Views/Summary/Weekly.cshtml
@@ -11,6 +11,7 @@
     }
 
     ViewData["HouseholdNo"] = Model.HouseholdNo;
+    ViewData["Title"] = "Checkup Summary - Weekly";
 }
 
 <main class="my-8 flex justify-center items-center">
