--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WRAListVM
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Women of Reproductive Age and Adolescent Women for Family Planning Services";
     Layout = "Layouts/_FormLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
