--- a/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_HouseholdLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Household - Update";
 }
 
 <section class="flex justify-center pt-16">
