--- a/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_HouseholdLayout";
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Households";
     ViewData["RequestUrl"] = Model.RequestUrl;
 }
 
