--- a/AUF.EMR.MVC/Views/Masterlist/EditAdultInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditAdultInfo.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "EditAdultInfo";
+    ViewData["Title"] = "Masterlist of Adult - Update";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
