--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "EditChildrenInfo";
+    ViewData["Title"] = "Masterlist of Child - Update";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
