--- a/AUF.EMR.MVC/Views/OralHealthClient/Details.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
     Layout = "Layouts/_OralHealthLayout";
+    ViewData["Title"] = "Oral Health Client - Details";
 }
 
 <div class="container mx-auto px-4 py-8">
