--- a/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["HouseholdNo"] = Model.HouseholdNo;
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Patient Record - Update";
 }
 
 <div class="container mx-auto px-4 py-8">
