--- a/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Patient Records";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
