--- a/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_PregnancyRecordsIndex";
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Pregnancy Records";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
