--- a/AUF.EMR.MVC/Views/User/AdminChangePassword.cshtml
+++ b/AUF.EMR.MVC/Views/User/AdminChangePassword.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layouts/_BarangaySideLayout";
+    ViewData["Title"] = "Admin Change Password";
 }
 @if (Model.ErrorMessage != null)
 {
