--- a/AUF.EMR.MVC/Views/User/UserProfile.cshtml
+++ b/AUF.EMR.MVC/Views/User/UserProfile.cshtml
@@ -10,6 +10,7 @@
         Layout = "Layouts/_FormLayout";
     }
     ViewData["HouseholdNo"] = Model.HouseholdNo;
+    ViewData["Title"] = "User Profile";
 }
 
 <div class="bg-white w-full flex flex-col gap-5 px-3 md:px-16 lg:px-28 md:flex-row text-[#161931] rounded-lg">
