--- a/AUF.EMR.MVC/Views/VaccinationAppointment/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/VaccinationAppointment/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Vaccination Appointment - Update";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
