--- a/AUF.EMR.MVC/Views/WRA/Create.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "Layouts/_FormLayout";
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Women of Reproductive Age and Adolescent Women for Family Planning Services - Create";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
