--- a/AUF.EMR.MVC/Views/WRA/Details.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DetailWRAVM
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Women of Reproductive Age and Adolescent Women for Family Planning Services - Details";
     Layout = "Layouts/_DetailsLayout";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
