Fix sorting bug

--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -57,7 +57,7 @@
                         <span asp-validation-for="HouseholdMember.Sex" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
-                    <div class="mb-4 w-4/5">
+                    @*<div class="mb-4 w-4/5">
                         <label asp-for="HouseholdMember.Age" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
                         <div class="flex items-center space-x-2">
                             <input asp-for="HouseholdMember.Age" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 flex-1" />
@@ -68,7 +68,7 @@
                             </select>
                         </div>
                         <span asp-validation-for="HouseholdMember.Age" class="block mb-2 text-sm text-red-700"></span>
-                    </div>
+                    </div>*@
 
                     <div class="mb-4">
                         <label asp-for="HouseholdMember.Birthday" class="block mb-2 text-sm font-medium text-gray-700">Birthday</label>
